--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0.2",
         "kyslik/column-sortable": "^6.4",
         "laravel/framework": "^9.19",
+        "laravel/sanctum": "^3.0",
         "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.24"
     },
